--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>week4 10 perfume spilt Landing Page</title>
-    <!-- google font -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <!-- icon -->
-  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <!-- /*----------  Navbar  ----------*/ -->
@@ -48,15 +45,26 @@
                 <h1 class="title">mmm ahhh <br>..push it!</h1>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, nam.</p>
                 <button class="button">Discover More</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- /*----------  Slider  ----------*/ -->
+    <div class="slider">
+        <div class="pages">
+            <span>01</span>06
+        </div>
+        <div class="arrows">
+            <ion-icon name="arrow-back-circle-outline"></ion-icon>
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
         </div>
     </div>
 
 
 
-
-
-
-
+    <!-- icon -->
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <script src="main.js"></script>
         
 </body>
 </html>
